Change the way spot data is downloaded